--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <title>Angular</title>
 
 
-    <link rel="stylesheet/less" type="text/css" href="css/main.less">
-	<link rel="stylesheet" href="css/animation.css">
-	<link rel="stylesheet" href="lib/jQuery/orbit-1.3.0.css">
 
-    <script src="lib/less/less-1.3.3.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="build/index.css">
+
+    <!--<script src="lib/less/less-1.3.3.min.js" type="text/javascript"></script>-->
 
 
-    <script src="lib/angular/angular.min.js"></script>
+<!--       <script src="lib/angular/angular.min.js"></script>
 	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
 
     <script src="lib/angular/angular-route.min.js"></script>
 	<script src="lib/angular/angular-animate.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="lib/angular/angular-sanitize.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular-sanitize.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>-->
+
+
+    <script src="build/scripts.min.js"></script>
+
 </head>
 <body>
 
