--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -70,7 +70,7 @@
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/monitoring" style="">Veew detail</a>
+            <a href="#web/borispol" style="">Veew detail</a>
         </div>
 
     </div>
@@ -83,7 +83,7 @@
             </div>
 
             <div style="margin-right: 50%">
-                <p><u><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a></u>
+                <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a>
                 </p>
 
 
@@ -105,8 +105,6 @@
                     http://borispol.hol.es </a>
 
                 </p>
-
-                <p>Демо вход -> login: demo | Pass: demo </p>
             </div>
         </div>
 
