--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -18,8 +18,8 @@
             </div>
 
             <div style="margin-right: 50%">
-                <p><u><a href="http://motohelp-ua.org/atlas" target="_blank"
-                         title="Перейти на страницу..">Мониторинг</a></u>
+                <p><a href="http://motohelp-ua.org/atlas" target="_blank"
+                         title="Перейти на страницу..">Мониторинг</a>
                 </p>
 
                 <p>
@@ -78,11 +78,16 @@
 
     <div class="item-block">
         <div>
-            <div style="float: right; width: 50%; height: 100px">
+            <div   style="float: right; width: 50%; height: 300px">
+                <div class="title-meteo">
 
+                </div>
             </div>
 
-            <div style="margin-right: 50%">
+
+
+
+            <div style="margin-right: 50%; min-height: 300px">
                 <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a>
                 </p>
 
@@ -105,6 +110,49 @@
                     http://borispol.hol.es </a>
 
                 </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="container-item">
+
+
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/borispol" style="">Veew detail</a>
+        </div>
+
+    </div>
+
+
+    <div class="item-block">
+        <div>
+            <div class="sprite-img">
+                <div class="title-hyosung">
+
+                </div>
+            </div>
+            <div style="margin-right: 50%; min-height: 300px">
+                <p>Псевдо 3Д
+                </p>
+
+
+                <p>
+                    Мотоцикл был смоделирован в 3dmax, отснят по кругу и зашит во flash.
+                </p>
+                Спросите кто его делал? Конечно же я :). Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
+
+                <p>
+                    Из дополнительных сведений -
+                    Основное время ушлона моделлинг, а именно 3 недели. Просчет одного цвета занимает от 4 до 8 часов.
+                    Программирования мало - но все равно крассиво. И сама детализация мотоцикла на порядок сложней моделинга авто из-за очень большого
+                    количества мелочевки (подножки винтики итп). К сожалению за исскуство работать даже в 3Dmax платят меньше чем за программирование, по этому
+                    я оставил эту работу другим (хотя очень скучаю). Если заказывать такую работу, то эффективней нанять моделлера отдельно. Стоимость такой модели около 200$ у фрилансеров.
+                </p>
+
+
             </div>
         </div>
 
