--- a/module/about/about_ru.html
+++ b/module/about/about_ru.html
@@ -1,31 +1,31 @@
 <div>
 
 
+    <h4>Фефраль 2012 - по настоящее время - свой проект: Разработка GPS систем контроля и слежения в реальном времени
+         (HTML, PHP, JS,
+        JAVA, (on Centos OpenVZ)).
 
-    <h4> Декабрь 2013 - по настоящее время:Unisystem.Programming web interface. Basic info <a
-            href="http://reteko.com/">http://reteko.com/</a>. </h4>
+      </h4>
 
-    <h4>February 2012 - to present time - own project: Development real-time GPS tracking service (HTML, PHP, JS,
-        JAVA, (on Centos OpenVZ)).</h4>
-
-    <p> Purpose:</p>
+    <p> Назначение:</p>
 
     <ul type="disc">
-        <li>Quick response Rescue and assistance in case incident.</li>
-        <li>Security system moto/auto vehicle in case of driving away.</li>
-        <li>Logistics.</li>
+
+        <li> Оперативное реагирование, выезд на инцидент произошедший в дороге.</li>
+        <li>Охранная сичтема для мото/авто в случае угона</li>
+        <li>Логистика</li>
     </ul>
-    <p>System functions</p>
+    <p>Функции системы</p>
     <ul>
-        <li>Online location objects.</li>
-        <li>Recording speed, distance, time, direction of travel, track.</li>
-        <li>Event notification operator.</li>
-        <li>Determination of the nearest "member" for going to the "event".</li>
-        <li>Event notification member by: sms, e-mail, phone.</li>
-
-
+        <li>Онлайн определение местоположения</li>
+        <li>Хранения данных о скорости, дистанции, времени, направления движения, запсь трека.</li>
+        <li>Оповещение оператора о событии</li>
+        <li>Расчет ближайшего волонтера для выезда на событие.</li>
+        <li>Оповещение волонтеров по:  sms, e-mail, phone.</li>
     </ul>
 
+    <h4> Декабрь 2013 - по настоящее время:Unisystem. Создание веб интерфесов по управлению системой. Основная информация <a
+            href="http://reteko.com/">http://reteko.com/</a>. </h4>
 
     <h4> April 2013 - to November 2013 JavaScript developer. Programming for Mobile Applications in the company
         Intellect Service.</h4>
