--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--<script src="lib/less/less-1.3.3.min.js" type="text/javascript"></script>-->
 
 
-       <script src="lib/angular/angular.min.js"></script>
+     <!--  <script src="lib/angular/angular.min.js"></script>
 	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
 
     <script src="lib/angular/angular-route.min.js"></script>
@@ -18,10 +18,10 @@
     <script src="lib/angular/angular-sanitize.js"></script>
 
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers.js"></script>-->
 
 
-    <!--<script src="build/scripts.min.js"></script>-->
+    <script src="build/scripts.min.js"></script>
 
 </head>
 <body>
