--- a/module/design/design_en.html
+++ b/module/design/design_en.html
@@ -3,9 +3,32 @@
 
     </div>
 
-    <div class="item">
-        Page under construction
+    <div class="item" style="text-align: center">
+       3dmax modelling (post Photoshop)
 	</div>
+
+    <div transport>
+        <p align="center"><img  id="largeImg" src="module/design/transport/1_800.jpg" alt="Large image"></p>
+
+
+
+        <div id="li" align="center">
+            <ul id="thumbs" align="center">
+                <!-- При наведении на изображение показывается встроенная подсказка браузера (title) -->
+                <li><a href="module/design/transport/1_800.jpg" title="GT650R"><img src="module/design/transport/1_80.jpg"></a></li>
+                <li><a href="module/design/transport/2_800.jpg" title="GT650R"><img src="module/design/transport/2_80.jpg"></a></li>
+                <li><a href="module/design/transport/3_800.jpg" title="GT650R"><img src="module/design/transport/3_80.jpg"></a></li>
+                <li><a href="module/design/transport/4_800.jpg" title="Slavuta"><img src="module/design/transport/4_80.jpg"></a></li>
+                <li><a href="module/design/transport/5_800.jpg" title="Forza"><img src="module/design/transport/5_80.jpg"></a></li>
+                <li><a href="module/design/transport/6_800.jpg" title="Касатка"><img src="module/design/transport/6_80.jpg"></a></li>
+                <li><a href="module/design/transport/7_800.jpg" title="Moto-Shark"><img src="module/design/transport/7_80.jpg"></a></li>
+                <li><a href="module/design/transport/8_800.jpg" title="Zx6R"><img src="module/design/transport/8_80.jpg"></a></li>
+                <li><a href="module/design/transport/9_800.jpg" title="Minsk"><img src="module/design/transport/9_80.jpg"></a></li>
+                <li><a href="module/design/transport/10_800.jpg" title="Matiz-3"><img src="module/design/transport/10_80.jpg"></a></li>
+                <li><a href="module/design/transport/11_800.jpg" title="Matiz-3"><img src="module/design/transport/11_80.jpg"></a></li>
+                <li><a href="module/design/transport/12_800.jpg" title="Forza"><img src="module/design/transport/12_80.jpg"></a></li>
+            </ul>
+        </div>
 
     </div>
 </div>
