--- a/module/print/print_en.html
+++ b/module/print/print_en.html
@@ -3,14 +3,9 @@
 
     </div>
 
-    <div class="navigation">
-        <div class="section">
-            Education
-        </div>
-        <div class="section">
-            Experience
-        </div>
-    </div>
+    <article class="post__article no-print" jscroll>
+
+
 
     <div class="item">
 
@@ -21,7 +16,7 @@
 
         </div>
         <div style="clear: both; margin-top: 20px" class="item">
-            <h3>Education: </h3>
+            <h2>Education</h2>
 
             <p>1997-2003 National Aviation University of Ukraine (higher education), diploma of
                 engineer-constructor.</p>
@@ -134,6 +129,9 @@
     <h2>
         Experience
     </h2>
+    <p>
+
+    </p>
     <h4> December 2013 - to present time:Unisystem.Programming web interface. Basic info <a
             href="http://reteko.com/">http://reteko.com/</a>. </h4>
 
@@ -219,4 +217,5 @@
         </li>
 
     </ul>
+    </article>
 </div>
