--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 
 
-       <!--<script src="lib/angular/angular.min.js"></script>
-	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
 
+	<!--<script src="lib/jQuery/jquery-1.11.1.js"></script>
+    <script src="lib/jQuery/jquery.scrollNav.js"></script>
+
+    <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
 	<script src="lib/angular/angular-animate.js"></script>
     <script src="lib/angular/angular-sanitize.js"></script>
