--- a/module/print/print_ru.html
+++ b/module/print/print_ru.html
@@ -1,28 +1,16 @@
-<article class="post__article no-print" jscroll>
+
+
+
 <div>
+
+<form style="text-align: right">
+    <input type="button" style="padding: 5px 10px" value="Скачать" onClick="window.location.href='Lipatov_en.pdf'">
+</form>
+<article class="post__article no-print" jscroll>
 <div style="border-bottom: 1px solid #ebebeb;">
 
 
-
-<div class="navigation">
-    <div class="section">
-        Education
-    </div>
-    <div class="section">
-        Experience
-    </div>
-</div>
-
 <div class="item">
-
-
-
-    <div style="border-bottom: 1px solid #ebebeb;">
-
-    </div>
-
-
-
 
 
     <div class="item">
@@ -235,6 +223,6 @@ two workers to the foundations of work with software CATIA V5 R17.
 
 </ul>
 </div>
+</article>
 </div>
 
-</article>
