--- a/module/print/print_en.html
+++ b/module/print/print_en.html
@@ -1,5 +1,10 @@
 
 <div>
+
+<form style="text-align: right">
+    <input type="button" style="padding: 5px 10px" value="Download" onClick="window.location.href='Lipatov_en.pdf'">
+</form>
+
 <article class="post__article " jscroll>
     <div style="border-bottom: 1px solid #ebebeb;">
 
