--- a/module/print/print_ru.html
+++ b/module/print/print_ru.html
@@ -4,8 +4,9 @@
 <div>
 
 <form style="text-align: right">
-    <input type="button" style="padding: 5px 10px" value="Скачать" onClick="window.location.href='Lipatov_en.pdf'">
+    <a class="button gray no-print" href="Lipatov_en.pdf" download="CV_Lipatov">Скачать</a>
 </form>
+
 <article class="post__article no-print" jscroll>
 <div style="border-bottom: 1px solid #ebebeb;">
 
