--- a/module/print/print_en.html
+++ b/module/print/print_en.html
@@ -2,8 +2,9 @@
 <div>
 
 <form style="text-align: right">
-    <input type="button" style="padding: 5px 10px" value="Download" onClick="window.location.href='Lipatov_en.pdf'">
+    <a class="button gray no-print" href="Lipatov_en.pdf" download="CV_Lipatov">Download</a>
 </form>
+
 
 <article class="post__article " jscroll>
     <div style="border-bottom: 1px solid #ebebeb;">
