--- a/module/design/design_en.html
+++ b/module/design/design_en.html
@@ -31,4 +31,11 @@
         </div>
 
     </div>
+
+    <div class="content-design">
+        Have a drawings or fantasy - all models are made in the program Max 3D max. Then  postprocessing editing Photoshop.
+        Some work has been presented at the show "Сar of the future" Auto(r). I have little experience with animation technical construction.
+
+
+    </div>
 </div>
