--- a/module/design/design_ru.html
+++ b/module/design/design_ru.html
@@ -31,4 +31,10 @@
         </div>
 
     </div>
+    <div class="content-design">
+       Все модели выполненны в программе ЗD Max с нуля по имеющимся чертежам или фантазии, с последующей обработкой в фотошопе.
+        Принимал участие в конкурсе Аuto(r), автомобили будущего. Имеется небольшой опыти анимации технических исделий (сборка, монтаж).
+
+
+    </div>
 </div>
