--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -13,7 +13,7 @@
         <div>
             <div   style="float: right; width: 50%; height: 300px">
                     <div class="title-monitoring">
-
+                        <img src="module/web/monitoring/title.jpg" style="width: 100%">
                     </div>
             </div>
 
@@ -23,20 +23,20 @@
                 </p>
 
                 <p>
-                    Для cлужбы спасения и помощи двухколесным участникам дорожного движения - <a
+                    <!--Для cлужбы спасения и помощи двухколесным участникам дорожного движения -->
+                   For  rescue and assistance Service moto/velo participant of traffic
+                    - <a
                         href="http://motohelp-ua.org/"
                         target="_blank"
                         title="MotoHelp">МотоХелп</a>.
-                    Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в
-                    дороге. 80%
-                    функционала написан под требования МХ. Для "сторонних обывателей" основое преимущество - адаптация
-                    для
-                    смартфонов и
-                    работа приложения на малых скоростях передачи данных(GPRS) при большом количестве пользователей.
+                    <!--Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в-->
+                    Site create according to the wishes MotoHelp Service for immediately response road accident.
+                    Most of the function site is notification MH. For the average user this functionality is hidden.
+                    The main advantage of the system, operating at slow communication.
                 </p>
 
                 <p>
-                    Принцип работы и конструкция: Сайт написан на платформе <a href="	http://leafletjs.com/"
+                    The principle of operation and design: The site uses the library <a href="	http://leafletjs.com/"
                                                                                target="_blank"
                                                                                title="Leaflet">Leaflet</a>. Парсер на
                     JAVA
@@ -80,7 +80,7 @@
         <div>
             <div   style="float: right; width: 50%; height: 300px">
                 <div class="title-meteo">
-
+                    <img src="module/web/borispol/borispol1.jpg" style="width: 100%">
                 </div>
             </div>
 
@@ -131,7 +131,7 @@
         <div>
             <div class="sprite-img">
                 <div class="title-hyosung">
-
+                    <img src="module/web/hyosung/010000.png" style="width: 100%">
                 </div>
             </div>
             <div style="margin-right: 50%; min-height: 300px">
