--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -38,14 +38,13 @@
                 <p>
                     The principle of operation and design: The site uses the library <a href="	http://leafletjs.com/"
                                                                                target="_blank"
-                                                                               title="Leaflet">Leaflet</a>. Парсер на
-                    JAVA
-                    слушает порт,
-                    принимает, разшифровывает и складирует принятые пакеты в базу данных MySQL. Страница с подключенным
-                    JavaScript с периодичностью опрашивает базу с "вопросом" появления новых координат.
-                    Все данные отображаются у всех пользователей входящих в группу.
+                                                                               title="Leaflet">Leaflet</a>.
 
-                    Сайт в непрерывно обновляется, временно сраничка автоматической регистрации отключена. Пробный вход
+                    JAVA parser listens port, receives, decodes and stores the received packets into a MySQL database
+                    Page with javascript regularly polls the database analyzing the emergence of new coordinates.
+                    All data is displayed for all users in the group.
+
+                    Demo entrance:
                     demo
                     demo.
 
@@ -53,13 +52,13 @@
 
 
                 <p>
-                    Перейти на страницу <a href="http://motohelp-ua.org/atlas" target="_blank"
-                                           title="Перейти на страницу..">
+                    Go to the page <a href="http://motohelp-ua.org/atlas" target="_blank"
+                                           title=" Go to the page..">
                     http://motohelp-ua.org/atlas </a>
 
                 </p>
 
-                <p>Демо вход -> login: demo | Pass: demo </p>
+                <p>Demo entrance  -> login: demo | Pass: demo </p>
             </div>
         </div>
 
@@ -93,11 +92,10 @@
 
 
                 <p>
-                    Подборка оперативной информации о погоде. Типичный пример модульной разработки с помощью requireJs.
+                    Selection of operational information about the weather. A typical example of a modular design using requireJs.
 
                 </p>
-                Страница создана для оценки погоды. Является помошником в дороге и помогает оценить приближение осадков
-                за несколько часов.
+                This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
                 <p>
 
 
@@ -105,8 +103,8 @@
 
 
                 <p>
-                    Перейти на страницу <a href="http://borispol.hol.es" target="_blank"
-                                           title="Перейти на страницу..">
+                    Go to the page  <a href="http://borispol.hol.es" target="_blank"
+                                           title="Go to the page ">
                     http://borispol.hol.es </a>
 
                 </p>
@@ -135,14 +133,14 @@
                 </div>
             </div>
             <div style="margin-right: 50%; min-height: 300px">
-                <p>Псевдо 3Д
+                <p>Pseudo 3D
                 </p>
 
 
                 <p>
-                    Мотоцикл был смоделирован в 3dmax, отснят по кругу и зашит во flash.
+                    The bike was modeled in 3d max, shot around and inserted into the flash.
                 </p>
-                Спросите кто его делал? Конечно же я :). Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
+                Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
 
                 <p>
                     Из дополнительных сведений -
