--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -41,7 +41,7 @@
                                                                                title="Leaflet">Leaflet</a>. Парсер на
                     JAVA
                     слушает порт,
-                    принимает, разшифровывает и складирует принятые пакеты в базу данных MySQL. Страница с подключенным
+                    принимает, расшифровывает и складирует принятые пакеты в базу данных MySQL. Страница с подключенным
                     JavaScript с периодичностью опрашивает базу с "вопросом" появления новых координат.
                     Все данные отображаются у всех пользователей входящих в группу.
 
@@ -96,8 +96,7 @@
                     Подборка оперативной информации о погоде. Типичный пример модульной разработки с помощью requireJs.
 
                 </p>
-                Страница создана для оценки погоды. Является помошником в дороге и помогает оценить приближение осадков
-                за несколько часов.
+                Страница создана для оценки погоды. Является помощником в дороге и помогает оценить приближение осадков за несколько часов.
                 <p>
 
 
@@ -142,7 +141,7 @@
                 <p>
                     Мотоцикл был смоделирован в 3dmax, отснят по кругу и зашит во flash.
                 </p>
-                Спросите кто его делал? Конечно же я :). Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
+                 Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
 
                 <p>
                     Из дополнительных сведений -
