--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
 
     <link rel="stylesheet" href="build/index.css">
 
-
-
-<!--
+    <!--
 	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
     <script src="lib/jQuery/jquery.scrollNav.min.js"></script>
-
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
 	<script src="lib/angular/angular-animate.js"></script>
     <script src="lib/angular/angular-sanitize.js"></script>
-
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>-->
+    <script src="js/controllers.js"></script>
+    -->
 
 
     <script src="build/scripts.min.js"></script>
