--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -13,7 +13,7 @@
         <div>
             <div   style="float: right; width: 50%; height: 300px">
                     <div class="title-monitoring">
-                        <img src="module/web/monitoring/title.jpg" style="width: 100%">
+                        <img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000">
                     </div>
             </div>
 
@@ -79,7 +79,7 @@
         <div>
             <div   style="float: right; width: 50%; height: 300px">
                 <div class="title-meteo">
-                    <img src="module/web/borispol/borispol1.jpg" style="width: 100%">
+                    <img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black">
                 </div>
             </div>
 
@@ -129,7 +129,7 @@
         <div>
             <div class="sprite-img">
                 <div class="title-hyosung">
-                    <img src="module/web/hyosung/010000.png" style="width: 100%">
+                    <img src="module/web/hyosung/010000.png" style="width: 90%; bacground: black">
                 </div>
             </div>
             <div style="margin-right: 50%; min-height: 300px">
@@ -140,13 +140,12 @@
                 <p>
                     The bike was modeled in 3d max, shot around and inserted into the flash.
                 </p>
-                Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
+                Training project. Use dealers of this brand in Ukraine.
 
                 <p>
-                    Из дополнительных сведений -
-                    Основное время ушлона моделлинг, а именно 3 недели. Просчет одного цвета занимает от 4 до 8 часов.
-                    Программирования мало - но все равно крассиво. И сама детализация мотоцикла на порядок сложней моделинга авто из-за очень большого
-                    количества мелочевки (подножки винтики итп).
+                    Additional information -
+                    a lot of small details of the construction, a lot of time is spent in modeling, about 3 weeks. Calculation scene in 3D-max of the same color takes up 4 or 8 hours.
+                    Programming a little - but still beautiful.
                 </p>
 
 
