--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -13,7 +13,7 @@
         <div>
             <div   style="float: right; width: 50%; height: 300px">
                 <div class="title-monitoring">
-                    <img src="module/web/monitoring/title.jpg" style="width: 100%">
+                    <img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000">
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
         <div>
             <div   style="float: right; width: 50%; height: 300px">
                 <div class="title-meteo">
-                    <img src="module/web/borispol/borispol1.jpg" style="width: 100%">
+                    <img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black">
                 </div>
             </div>
 
@@ -130,7 +130,7 @@
         <div>
             <div class="sprite-img">
                 <div class="title-hyosung">
-                    <img src="module/web/hyosung/010000.png" style="width: 100%">
+                    <img src="module/web/hyosung/010000.png" style="width: 90%; bacground: black">
                 </div>
             </div>
             <div style="margin-right: 50%; min-height: 300px">
