--- a/module/print/print_ru.html
+++ b/module/print/print_ru.html
@@ -1,5 +1,7 @@
 <div>
-
+<div style="margin: 10px; text-align: right">
+<b>Детальнee:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
+</div>
 
 <article class="post__article" jscroll>
 <div style="border-bottom: 1px solid #ebebeb;">
