--- a/module/home/home_ru.html
+++ b/module/home/home_ru.html
@@ -41,24 +41,24 @@
                     <h3>JavaScript</h3>
                     <ul class="none">
                         <li>
-                            jQuery (jQuery-ui etc.)
+                            jQuery (jQuery-ui etc.) 2012 по настроящее время
                         </li>
 
                         <li>
-                            Sencha Touch2 (six months experience)
+                            Sencha Touch2 (six months experience). Апрель 2013 - Октябрь 2013
                         </li>
                         <li>
                             ExtJS (not often used, but this framework - Sencha family group)
                         </li>
 
                         <li>
-                            Require.js (three months experience)
+                            Require.js (three months experience). Декабрь 2013 по насоящее время
                         </li>
                         <li>
                             Angular (junior)
                         </li>
                         <li>
-                            Lodash
+                            Lodash.  Декабрь 2013 по насоящее время
                         </li>
 
                     </ul>
@@ -74,10 +74,10 @@
                     <h3>  Система контроля версий </h3>
                     <ul class="none">
                         <li>
-                            SVN (one year experience)
+                            SVN (one year experience).  April 2013 - April 2014
                         </li>
                         <li>
-                            GIT (three months experience)
+                            GIT (three months experience). Декабрь 2013 to present time.
                         </li>
 
                     </ul>
