--- a/module/home/home_en.html
+++ b/module/home/home_en.html
@@ -37,43 +37,43 @@
 					<h3>JavaScript</h3>
 					<ul class="none">
 						<li>
-							jQuery (jQuery-ui etc.)
+							jQuery (jQuery-ui etc.) 2012 to present time
 						</li>
 
 						<li>
-							Sencha Touch2 (six months experience)
+							Sencha Touch2 (six months experience). April 2013 - October 2013
 						</li>
 						<li>
 							ExtJS (not often used, but this framework - Sencha family group)
 						</li>
 
 						<li>
-							Require.js (three months experience)
+							Require.js (three months experience). December 2013 to present time
 						</li>
 						<li>
 							Angular (junior)
 						</li>
 						<li>
-							Lodash
+							Lodash. December 2013 to present time
 						</li>
 
 					</ul>
 					<h3> Web template engines </h3>
 					<ul class="none">
 						<li>
-							DustJS
+							DustJS. December 2013 - June 2014
 						</li>
 						<li>
-							jQuery Templates
+							jQuery Templates. June 2014 - to present time
 						</li>
 					</ul>
 					<h3>  Revision control </h3>
 					<ul class="none">
 						<li>
-							SVN (one year experience)
+							SVN (one year experience).  April 2013 - April 2014
 						</li>
 						<li>
-							GIT (three months experience)
+							GIT (three months experience).  December 2013 to present time.
 						</li>
 
 					</ul>
