--- a/module/home/home_en.html
+++ b/module/home/home_en.html
@@ -73,7 +73,7 @@
 							SVN (one year experience).  April 2013 - April 2014
 						</li>
 						<li>
-							GIT (three months experience).  December 2013 to present time.
+							GIT.  December 2013 to present time.
 						</li>
 
 					</ul>
