--- a/module/home/home_ru.html
+++ b/module/home/home_ru.html
@@ -52,13 +52,13 @@
                         </li>
 
                         <li>
-                            Require.js (three months experience). Декабрь 2013 по насоящее время
+                            Require.js (three months experience). Декабрь 2013 по настоящее время
                         </li>
                         <li>
                             Angular (junior)
                         </li>
                         <li>
-                            Lodash.  Декабрь 2013 по насоящее время
+                            Lodash.  Декабрь 2013 по настоящее время
                         </li>
 
                     </ul>
@@ -77,7 +77,7 @@
                             SVN (one year experience).  April 2013 - April 2014
                         </li>
                         <li>
-                            GIT (three months experience). Декабрь 2013 to present time.
+                            GIT. Декабрь 2013 to present time.
                         </li>
 
                     </ul>
