--- a/module/home/home_en.html
+++ b/module/home/home_en.html
@@ -37,7 +37,7 @@
 					<h3>JavaScript</h3>
 					<ul class="none">
 						<li>
-							jQuery (jQuery-ui etc.) 2012 to present time
+							jQuery (jQuery-ui etc.) 2012 - to present time
 						</li>
 
 						<li>
@@ -48,10 +48,10 @@
 						</li>
 
 						<li>
-							Require.js (three months experience). December 2013 to present time
+							Require.js (three months experience). December 2013 - to present time
 						</li>
 						<li>
-							Angular (junior)
+							Angular. November 2014 - to present time;
 						</li>
 						<li>
 							Lodash. December 2013 to present time
@@ -70,10 +70,10 @@
 					<h3>  Revision control </h3>
 					<ul class="none">
 						<li>
-							SVN (one year experience).  April 2013 - April 2014
+							SVN. (one year experience).  April 2013 - April 2014
 						</li>
 						<li>
-							GIT.  December 2013 to present time.
+							GIT.  December 2013 - to present time.
 						</li>
 
 					</ul>
