--- a/module/home/home_ru.html
+++ b/module/home/home_ru.html
@@ -41,7 +41,7 @@
                     <h3>JavaScript</h3>
                     <ul class="none">
                         <li>
-                            jQuery (jQuery-ui etc.) 2012 по настроящее время
+                            jQuery (jQuery-ui etc.) 2012 - по настроящее время
                         </li>
 
                         <li>
@@ -52,13 +52,13 @@
                         </li>
 
                         <li>
-                            Require.js (three months experience). Декабрь 2013 по настоящее время
+                            Require.js (three months experience). Декабрь 2013 - по настоящее время
                         </li>
                         <li>
-                            Angular (junior)
+                            Angular. Ноябрь 2014 - по настроящее время
                         </li>
                         <li>
-                            Lodash.  Декабрь 2013 по настоящее время
+                            Lodash.  Декабрь 2013 - по настоящее время
                         </li>
 
                     </ul>
@@ -74,10 +74,10 @@
                     <h3>  Система контроля версий </h3>
                     <ul class="none">
                         <li>
-                            SVN (one year experience).  April 2013 - April 2014
+                            SVN. (one year experience).  April 2013 - April 2014
                         </li>
                         <li>
-                            GIT. Декабрь 2013 to present time.
+                            GIT. Декабрь 2013 - to present time.
                         </li>
 
                     </ul>
