--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="build/index.css">
+    <link rel="stylesheet" href="build/index.css?v=1.5">
 
     <!--
 	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
@@ -19,7 +19,7 @@
     -->
 
 
-    <script src="build/scripts.min.js"></script>
+    <script src="build/scripts.min.js?v=1.5"></script>
 
 </head>
 <body>
