--- a/module/home/home_en.html
+++ b/module/home/home_en.html
@@ -31,33 +31,14 @@
         <h3>IT skills </h3>
 
         <div class="item">
-            <h4>Middle </h4>
+
 			<ul style="margin-top: 10px">
 				<li>
 					<h3>JavaScript</h3>
-					<ul class="none">
-						<li>
-							jQuery (jQuery-ui etc.) 2012 - to present time
-						</li>
+                    <div ng-include="includeHtml">
 
-						<li>
-							Sencha Touch2 (six months experience). April 2013 - October 2013
-						</li>
-						<li>
-							ExtJS (not often used, but this framework - Sencha family group)
-						</li>
+                    </div>
 
-						<li>
-							Require.js (three months experience). December 2013 - to present time
-						</li>
-						<li>
-							Angular. November 2014 - to present time;
-						</li>
-						<li>
-							Lodash. December 2013 to present time
-						</li>
-
-					</ul>
 					<h3> Web template engines </h3>
 					<ul class="none">
 						<li>
