--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     -->
 
 
-    <script src="build/scripts.min.js?v=1.5"></script>
+    <script src="build/scripts.min.js?v=2014.12.6-13:27:57"></script>
 
 </head>
 <body>
