--- a/module/home/home_ru.html
+++ b/module/home/home_ru.html
@@ -39,29 +39,9 @@
             <ul style="margin-top: 10px">
                 <li>
                     <h3>JavaScript</h3>
-                    <ul class="none">
-                        <li>
-                            jQuery (jQuery-ui etc.) 2012 - по настроящее время
-                        </li>
+                    <div ng-include="includeHtml">
 
-                        <li>
-                            Sencha Touch2 (six months experience). Апрель 2013 - Октябрь 2013
-                        </li>
-                        <li>
-                            ExtJS (not often used, but this framework - Sencha family group)
-                        </li>
-
-                        <li>
-                            Require.js (three months experience). Декабрь 2013 - по настоящее время
-                        </li>
-                        <li>
-                            Angular. Ноябрь 2014 - по настроящее время
-                        </li>
-                        <li>
-                            Lodash.  Декабрь 2013 - по настоящее время
-                        </li>
-
-                    </ul>
+                    </div>
                     <h3> Шаблонизаторы </h3>
                     <ul class="none">
                         <li>
