--- a/module/about/about_ru.html
+++ b/module/about/about_ru.html
@@ -14,7 +14,7 @@
     <ul type="disc">
 
         <li> Оперативное реагирование, выезд на инцидент произошедший в дороге.</li>
-        <li>Охранная сичтема для мото/авто в случае угона</li>
+        <li>Охранная система для мото/авто в случае угона</li>
         <li>Логистика</li>
     </ul>
     <p>Функции системы</p>
