--- a/module/print/print_en.html
+++ b/module/print/print_en.html
@@ -10,117 +10,16 @@
     <div style="border-bottom: 1px solid #ebebeb;">
 
     </div>
+    <h2>
+        IT skills
+    </h2>
     <div class="item">
         <div style="clear: both; border-top: 1px solid gray; visibility: hidden">
+        </div>
+        <div ng-include="includeHtml">
 
         </div>
-        <div style="clear: both; margin-top: 20px" class="item">
-            <h2>Education</h2>
-
-            <p>1997-2003 National Aviation University of Ukraine (higher education), diploma of
-                engineer-constructor.</p>
-
-        </div>
-
-        <h3>IT skills </h3>
-
-        <div class="item">
-            <h4>Middle </h4>
-            <ul style="margin-top: 10px">
-                <li>
-                    <h3>JavaScript</h3>
-                    <ul class="none">
-                        <li>
-                            jQuery (jQuery-ui etc.)
-                        </li>
-
-                        <li>
-                            Sencha Touch2 (six months experience)
-                        </li>
-                        <li>
-                            ExtJS (not often used, but this framework - Sencha family group)
-                        </li>
-
-                        <li>
-                            Require.js (three months experience)
-                        </li>
-                        <li>
-                            Angular (junior)
-                        </li>
-                        <li>
-                            Lodash
-                        </li>
-
-                    </ul>
-                    <h3> Web template engines </h3>
-                    <ul class="none">
-                        <li>
-                            DustJS
-                        </li>
-                        <li>
-                            jQuery Templates
-                        </li>
-                    </ul>
-                    <h3>  Revision control </h3>
-                    <ul class="none">
-                        <li>
-                            SVN (one year experience)
-                        </li>
-                        <li>
-                            GIT (three months experience)
-                        </li>
-
-                    </ul>
-
-                </li>
-
-                <li style="margin-top: 20px">Node.JS (Express, ejs, ejs-locals)</li>
-                <li>AJAX (XMLHttpRequest, jQuery.ajax() )</li>
-                <li>Leaflet (the best knowledge)</li>
-                <li>Google api maps</li>
-                <li>Yandex api maps</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>MySQL</li>
-            </ul>
-            <h4>junior </h4>
-            <ul style="margin-top: 10px">
-                <li>AS 3.0</li>
-                <li>PHP</li>
-            </ul>
-            <h4>Basic programming skills</h4>
-            <ul>
-                <li>JAVA</li>
-                <li>С#</li>
-                <li>C++</li>
-
-            </ul>
-
-        </div>
-
-        <h3>Engineer skills </h3>
-        <ul>
-            <li>AutoCAD</li>
-            <li>CATIA V5</li>
-            <li>Photoshop</li>
-            <li>CorelDraw</li>
-            <li>3d Max + Vray</li>
-            <li>SonyVegas</li>
-            <li>AdobeFlash CS5</li>
-            <li>After Effects</li>
-        </ul>
-        <ul>
-            <li>IDE: Eclipse, NetBeans</li>
-        </ul>
-        <ul>
-            <li>Software: Microsoft Office</li>
-        </ul>
-
-
-
-
     </div>
-
         <div style="border-bottom: 1px solid gray; padding: 10px; margin: 20px">
 
 
@@ -128,93 +27,8 @@
     <h2>
         Experience
     </h2>
-    <p>
+    <div ng-include="experienceUrl">
 
-    </p>
-    <h4> December 2013 - to present time:Unisystem.Programming web interface. Basic info <a
-            href="http://reteko.com/">http://reteko.com/</a>. </h4>
-
-    <h4>February 2012 - to present time - own project: Development real-time GPS tracking service (HTML, PHP, JS,
-        JAVA, (on Centos OpenVZ)).</h4>
-
-    <p> Purpose:</p>
-
-    <ul type="disc">
-        <li>Quick response Rescue and assistance in case incident.</li>
-        <li>Security system moto/auto vehicle in case of driving away.</li>
-        <li>Logistics.</li>
-    </ul>
-    <p>System functions</p>
-    <ul>
-        <li>Online location objects.</li>
-        <li>Recording speed, distance, time, direction of travel, track.</li>
-        <li>Event notification operator.</li>
-        <li>Determination of the nearest "member" for going to the "event".</li>
-        <li>Event notification member by: sms, e-mail, phone.</li>
-
-
-    </ul>
-
-
-    <h4> April 2013 - to November 2013 JavaScript developer. Programming for Mobile Applications in the company
-        Intellect Service.</h4>
-
-    <p>Main responsibilities:</p>
-    Creating a mobile application. HTML coding, сreate a data structure, the main Frameworks: Sencha touch, Sencha
-    ExtJS.
-    <p> Purpose:</p>
-
-    <ul type="disc">
-        <li>Electronic document in your phone.</li>
-        <li>Transactions with money</li>
-        <li>Payment etc.</li>
-    </ul>
-
-    <h4>December 2010 to 2013: Head of Designer Projector Conctructor Departmen in the Akvavital company
-        (Construction and architecture).</h4>
-    <h4>May 2008 - 2010: designer-projector of the wellness-zones in the company “Akvavital” (Construction and
-        Architecture).</h4>
-    <ul>
-        <li>Work with Clients;</li>
-        <li>Making the design-projects of the wellness zone according to the wishes of Client with help of software
-            3D_max;
-        </li>
-
-        <li>Making the detailed drafting and design calculation with help of software: AutoCAD, CATIA v5.</li>
-        <li>Directing of project.</li>
-    </ul>
-
-    <h4>2002 - 2008 engineer-constructor of ASTC ANTONOV </h4>
-    <ul>
-        <li>Designing general appearance of planes;</li>
-        <li>Created and produced theoretical drawings of the plane’s general appearances;</li>
-        <li>adoption of new software;</li>
-    </ul>
-
-    Fairing of wind-powered engine for the plane “AN-148” was produced on the basis of my drawings. I have taught
-    two workers to the foundations of work with software CATIA V5 R17.
-
-    <h4>2000 - January 2007. engineer-constructor-designer in the company “Skateon” (part-time). </h4>
-    <ul>
-        <li>producing of theoretical drawings for general appearance of the planes;</li>
-        <li>design of cabin (cockpit), preparing a master geometry of goods for CNS;</li>
-        <li>estimating of weight information with help of software (CATIA V5);</li>
-        <li>making of advertising booklets;</li>
-
-        <li>projecting of separate assemblies for aggregate plane’s systems;</li>
-        <li>production of working drawings;</li>
-        <li>quality control of final products;</li>
-        <li>developed a new technologies for working with composite materials;</li>
-    </ul>
-
-    <h4>1998 – 1999 metalworker assembler in the company “AviaClub Ikar” (part-time): </h4>
-    <ul>
-        <li>work with composite materials;</li>
-        <li>installation of fuel system, final plane’s assembly;</li>
-        <li>2001 - 2002 i have been advanced in career: engineer-constructor in the same company. Up till now is put
-            up my project.
-        </li>
-
-    </ul>
+    </div>
 </article>
 </div>
