--- a/module/print/print_ru.html
+++ b/module/print/print_ru.html
@@ -1,245 +1,33 @@
 <div>
-<div style="margin: 10px; text-align: right">
-<b>Детальнee:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
-</div>
-
-<article class="post__article" jscroll>
-<div style="border-bottom: 1px solid #ebebeb;">
-
-
-<div class="item">
-
-
-    <div class="item">
-
-
-        <div style="clear: both; border-top: 1px solid gray; visibility: hidden">
-
-        </div>
-        <div style="clear: both; margin-top: 20px" class="item">
-            <h2>Education</h2>
-
-            <p>1997-2003 Национальный Авиационный Университет of Ukraine (higher education), diploma of
-                engineer-constructor.</p>
-
-        </div>
-
-        <h3>IT skills </h3>
-
-        <div class="item">
-
-            <ul style="margin-top: 10px">
-                <li>
-                    <h3>JavaScript</h3>
-                    <ul class="none">
-                        <li>
-                            jQuery (jQuery-ui etc.)
-                        </li>
-
-                        <li>
-                            Sencha Touch2 (six months experience)
-                        </li>
-                        <li>
-                            ExtJS (not often used, but this framework - Sencha family group)
-                        </li>
-
-                        <li>
-                            Require.js (three months experience)
-                        </li>
-                        <li>
-                            Angular (junior)
-                        </li>
-                        <li>
-                            Lodash
-                        </li>
-
-                    </ul>
-                    <h3> Web template engines </h3>
-                    <ul class="none">
-                        <li>
-                            DustJS
-                        </li>
-                        <li>
-                            jQuery Templates
-                        </li>
-                    </ul>
-                    <h3> Revision control </h3>
-                    <ul class="none">
-                        <li>
-                            SVN (one year experience)
-                        </li>
-                        <li>
-                            GIT (three months experience)
-                        </li>
-
-                    </ul>
-
-                </li>
-
-                <li style="margin-top: 20px">Node.JS (Express, ejs, ejs-locals)</li>
-                <li>AJAX (XMLHttpRequest, jQuery.ajax() )</li>
-                <li>Leaflet (the best knowledge)</li>
-                <li>Google api maps</li>
-                <li>Yandex api maps</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>MySQL</li>
-            </ul>
-            <h4>junior </h4>
-            <ul style="margin-top: 10px">
-                <li>AS 3.0</li>
-                <li>PHP</li>
-            </ul>
-            <h4>Basic programming skills</h4>
-            <ul>
-                <li>JAVA</li>
-                <li>С#</li>
-                <li>C++</li>
-
-            </ul>
-
-        </div>
-
-        <h3>Engineer skills </h3>
-        <ul>
-            <li>AutoCAD</li>
-            <li>CATIA V5</li>
-            <li>Photoshop</li>
-            <li>CorelDraw</li>
-            <li>3d Max + Vray</li>
-            <li>SonyVegas</li>
-            <li>AdobeFlash CS5</li>
-            <li>After Effects</li>
-        </ul>
-        <ul>
-            <li>IDE: Eclipse, NetBeans</li>
-        </ul>
-        <ul>
-            <li>Software: Microsoft Office</li>
-        </ul>
-
-
+    <div style="margin: 10px; text-align: right">
+        <b>Детальнee:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
     </div>
 
+    <article class="post__article" jscroll>
+        <div style="border-bottom: 1px solid #ebebeb;">
 
-</div>
+        </div>
+        <h2>
+            IT уровень
+        </h2>
 
-<div style="border-bottom: 1px solid gray; padding: 10px; margin: 20px">
+        <div class="item">
+            <div style="clear: both; border-top: 1px solid gray; visibility: hidden">
+            </div>
+            <div ng-include="includeHtml">
 
-
-</div>
-<h2>
-    Experience
-</h2>
-<h4> Декабрь 2013 - по настоящее время:Unisystem. Создание веб интерфесов по управлению системой. Основная информация <a
-        href="http://reteko.com/">http://reteko.com/</a>. </h4>
-<h4>Фефраль 2012 - по настоящее время - свой проект: Разработка GPS систем контроля и слежения в реальном времени
-    (HTML, PHP, JS,
-    JAVA, (on Centos OpenVZ)).
-
-</h4>
-
-<p> Назначение:</p>
-
-<ul type="disc">
-
-    <li> Оперативное реагирование, выезд на инцидент произошедший в дороге.</li>
-    <li>Охранная сичтема для мото/авто в случае угона</li>
-    <li>Логистика</li>
-</ul>
-<p>Функции системы</p>
-<ul>
-    <li>Онлайн определение местоположения</li>
-    <li>Хранения данных о скорости, дистанции, времени, направления движения, запсь трека.</li>
-    <li>Оповещение оператора о событии</li>
-    <li>Расчет ближайшего волонтера для выезда на событие.</li>
-    <li>Оповещение волонтеров по: sms, e-mail, phone.</li>
-</ul>
+            </div>
+        </div>
+        <div style="border-bottom: 1px solid gray; padding: 10px; margin: 20px">
 
 
-<h4> Апрель 2013 - Ноябрь 2013 JavaScript разработчик. Программирование для мобильных устройств в компании Intellect
-    Service.
+        </div>
+        <h2>
+            Опыт работ
+        </h2>
+        <div ng-include="experienceUrl">
 
-    <!--April 2013 - to November 2013 JavaScript developer. Programming for Mobile Applications in the company-->
-    <!--Intellect Service.-->
-</h4>
-
-<p>Основыне функции:</p>
-Создание мобильного приложения. Создание структуры данных, интерфейса, основные Frameworks: Sencha touch, Sencha
-ExtJS
-<!-- Creating a mobile application. HTML coding, сreate a data structure, the main Frameworks: Sencha touch, Sencha
- ExtJS.-->
-<p> Назначение приложения:</p>
-
-<ul type="disc">
-    <li>Электронный документ в вашем телефоне</li>
-    <li>Операции с деньгами</li>
-    <li>Покупка итп.</li>
-</ul>
-
-<h4>декабрь 2010 по 2013: Начальник проектного отдела в компаниии Аквавиталь (Проектировка и строительство зон отдыха)
-    <!--December 2010 to 2013: Head of Designer Projector Conctructor Departmen in the Akvavital company
-    (Construction and architecture).-->
-</h4>
-<h4>
-    Май 2008 - 2010: дизайнер-конструктор зон отдыха, компания "Аквавиталь" (Проектировка и строительство зон отдыха)
-    <!--May 2008 - 2010: designer-projector of the wellness-zones in the company “Akvavital” (Construction and
-    Architecture).-->
-</h4>
-
-<p>Основыне функции:</p>
-<ul>
-    <li>Работа с клиентами</li>
-    <li>Разработка дизайн-проекта зоны отдыха с помощью програмного обеспечения 3D_max
-        <!--Making the design-projects of the wellness zone according to the wishes of Client with help of software
-        3D_max;-->
-    </li>
-
-    <li>Создание деталировки, выпуск чертежей с помощью программного обеспечения: AutoCAD, CATIA v5.
-
-
-    <li>Cопровождение проекта на всез стадиях изготовления и воплощения</li>
-</ul>
-
-<h4> 2002 - 2008 инденер конструктор на АНТК Антонов
-    <!--2002 - 2008 engineer-constructor of ASTC ANTONOV--> </h4>
-<ul>
-    <li>
-        Проектировка общего вида самолетов
-        <!--Designing general appearance of planes;-->
-    </li>
-    <li>
-        Создание чертежей математически описывающих геометрию самолета
-        <!--Created and produced theoretical drawings of the plane’s general appearances;
-        -->
-    </li>
-    <li>Внедрение нового програмного обеспечения;</li>
-</ul>
-
-Обтекатель ветра питанием двигателя для самолета "Ан-148" был произведен на основе моих чертежей. Я научил двух
-работников основам работы с программным обеспечением CATIA V5 R17.
-
-<h4>2000 - январь 2007. Инженер-конструктор-дизайнер, компания “Skateon” (по совметительству). </h4>
-<ul>
-    <li>Выпуск теоретических чертежей общего вида самолетов;</li>
-    <li>Конструкция кабины (кабины), создание мастер-геометрии для станокв ЧПУ;</li>
-    <li>Расчет веса и центровки ЛА с помощью программного обеспечения (CATIA V5);</li>
-    <li>изготовление рекламных буклетов;</li>
-
-    <li>проектирование отдельных узлов для систем самолета;</li>
-    <li>выпуск рабочих чертежей;</li>
-    <li>контроль качества готовой продукции;</li>
-    <li>разработали новые технологии для работы с композитными материалами;</li>
-</ul>
-
-<h4>1998 - 1999 слесарь сборщик в компании "AviaClub Икар" (по совместительству): </h4>
-<ul>
-    <li>работать с композитными материалами;</li>
-    <li>установка топливной системы, монтаж окончательный самолёт;</li>
-    <li>2001 - 2002 на повышение: инженер-конструктор в той же компании.</li>
-
-</ul>
-</div>
-</article>
+        </div>
+    </article>
 </div>
 
