--- a/module/home/skills_en.html
+++ b/module/home/skills_en.html
@@ -38,6 +38,9 @@
                 </li>
 
             </ul>
+            <div block-skill>
+
+            </div>
 
             <h3> Web template engines </h3>
             <ul class="none">
