--- a/module/home/skills_en.html
+++ b/module/home/skills_en.html
@@ -28,7 +28,7 @@
                 </li>
 
                 <li>
-                    Require.js (three months experience). December 2013 - to present time
+                    Require.js. December 2013 - to present time
                 </li>
                 <li>
                     Angular. November 2014 - to present time;
@@ -38,8 +38,13 @@
                 </li>
 
             </ul>
-            <div block-skill>
+            <div ng-controller="graph" class="block-graph-skill">
+                <div class="button" ng-click="click()">
+                    Show graph
+                </div>
+                <div class="graph-block-skill" block-skill ng-class="v.show" >
 
+                </div>
             </div>
 
             <h3> Web template engines </h3>
