--- a/module/home/skills_ru.html
+++ b/module/home/skills_ru.html
@@ -9,6 +9,15 @@
 <h3>IT навыки </h3>
 
 <div class="item">
+    <div ng-controller="graph" class="block-graph-skill">
+        <div class="button" ng-click="click()">
+            Наглядно
+        </div>
+        <div class="timeline">&nbsp;</div>
+        <div class="graph-block-skill" block-skill ng-class="v.show" >
+
+        </div>
+    </div>
 
     <ul style="margin-top: 10px">
         <li>
