--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <link rel="stylesheet" href="build/index.css?v=1.5">
 
-    <!--
-	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
+<!--	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
     <script src="lib/jQuery/jquery.scrollNav.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
@@ -16,8 +15,9 @@
     <script src="lib/angular/angular-sanitize.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    -->
-    <script src="build/scripts.min.js?v=2014.12.06-22:36:46"></script>
+    <script src="js/dirrectiveSkill.js"></script>-->
+
+    <script src="build/scripts.min.js?v=2014.12.07-01:27:08"></script>
 </head>
 <body>
 
@@ -66,7 +66,7 @@
                     <div class="book" style=" border-top: 1px solid transparent">
                         <div class="nav-panel no-print" style="margin-top: 10px" >
                             <div >
-                                <a class="{{cl[$index]}}"  ng-init="initEl(this)" ng-repeat="nav in navs" href="{{nav.href}}">
+                                <a class="{{nav.active}}"   ng-repeat="nav in navs" navs-elements href="{{nav.href}}">
                                     {{nav.t}}
                                 </a>
                             </div>
