--- a/module/home/skills_en.html
+++ b/module/home/skills_en.html
@@ -11,7 +11,15 @@
 
 
 <div class="item">
+    <div ng-controller="graph" class="block-graph-skill">
+        <div class="button" ng-click="click()">
+            Show graph
+        </div>
+        <div class="timeline">&nbsp;</div>
+        <div class="graph-block-skill" block-skill ng-class="v.show" >
 
+        </div>
+    </div>
     <ul style="margin-top: 10px">
         <li>
             <h3>JavaScript</h3>
@@ -38,14 +46,7 @@
                 </li>
 
             </ul>
-            <div ng-controller="graph" class="block-graph-skill">
-                <div class="button" ng-click="click()">
-                    Show graph
-                </div>
-                <div class="graph-block-skill" block-skill ng-class="v.show" >
 
-                </div>
-            </div>
 
             <h3> Web template engines </h3>
             <ul class="none">
