--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="build/index.css?v=1.5">
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
 
-<!--	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
+	<!--<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
     <script src="lib/jQuery/jquery.scrollNav.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
@@ -15,9 +16,13 @@
     <script src="lib/angular/angular-sanitize.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/dirrectiveSkill.js"></script>-->
+    <script src="js/dirrectiveSkill.js"></script>
+    <script src="module/contact/contact.js"></script>
+    <script src="lib/leaflet/leaflet.js"></script>-->
 
-    <script src="build/scripts.min.js?v=2014.12.07-01:27:08"></script>
+
+
+    <script src="build/scripts.min.js?v=2014.12.07-10:17:52"></script>
 </head>
 <body>
 
