--- a/module/contact/contact.html
+++ b/module/contact/contact.html
@@ -1,3 +1,9 @@
 <div class="content">
     <div ng-include = "content"></div>
+    <div class="item">
+        <div ng-include="mapUrl">
+
+        </div>
+
+    </div>
 </div>
