--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="build/index.css?v=1.5">
-    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
+    <link rel="stylesheet" href="build/index.css?v=2014.12.11-17:41:09">
+    <!--<link rel="stylesheet" href="lib/leaflet/leaflet.css">-->
 
 	<!--<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
     <script src="lib/jQuery/jquery.scrollNav.min.js"></script>
@@ -22,7 +22,7 @@
 
 
 
-    <script src="build/scripts.min.js?v=2014.12.10-18:57:19"></script>
+    <script src="build/scripts.min.js?v=2014.12.11-17:41:09"></script>
 </head>
 <body>
 
