--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="build/index.css?v=2014.12.13-14:52:07">
     <!--<link rel="stylesheet" href="lib/leaflet/leaflet.css">-->
 
-	<!--<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
+	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
     <script src="lib/jQuery/jquery.scrollNav.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
@@ -18,11 +18,11 @@
     <script src="js/controllers.js"></script>
     <script src="js/dirrectiveSkill.js"></script>
     <script src="module/contact/contact.js"></script>
-    <script src="lib/leaflet/leaflet.js"></script>-->
+    <script src="lib/leaflet/leaflet.js"></script>
 
 
 
-    <script src="build/scripts.min.js?v=2014.12.13-14:52:07"></script>
+    <!--<script src="build/scripts.min.js?v=2014.12.13-14:52:07"></script>-->
 </head>
 <body>
 
