--- a/module/home/skills_en.html
+++ b/module/home/skills_en.html
@@ -24,27 +24,16 @@
         <li>
             <h3>JavaScript</h3>
             <ul class="none">
-                <li>
-                    jQuery (jQuery-ui etc.) 2012 - to present time
-                </li>
-
-                <li>
-                    Sencha Touch2 (six months experience). April 2013 - October 2013
-                </li>
-                <li>
-                    ExtJS (not often used, but this framework - Sencha family group)
-                </li>
-
-                <li>
-                    Require.js. December 2013 - to present time
-                </li>
-                <li>
-                    Angular. November 2014 - to present time;
-                </li>
-                <li>
-                    Lodash. December 2013 to present time
-                </li>
-
+               <li ng-repeat="skill in skills" class="skills-textt-container-row">
+                <div class="inline-block text" >
+                   <b> {{skill.text}}</b>
+                </div>
+                 <div class="inline-block">
+                     {{skill.dateStart | date:'MMMM yyyy'}}
+                     &mdash;
+                     {{skill.dateEnd || langPpd.TO_PRESENT_TIME | date:'MMMM yyyy'}}
+                 </div>
+               </li>
             </ul>
 
 
